# getKraken

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  heroku.yml  package-lock.json  pyproject.toml  requirements.md  requirements.txt
api/: admin.py  db_pull_for_draft.py  draft_generator.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20210115_2154.py  0002_series_draft_order.py  0003_auto_20210119_1931.py  0003_auto_20210120_0403.py  0004_auto_20210121_0113.py  0005_auto_20210121_0137.py  0006_merge_20210121_0522.py  0007_remove_series_draft_order.py
config/: settings.py  urls.py
frontend/: .eslintcache  package-lock.json
frontend-mob/: package-lock.json  package.json
frontend-mob/components/: NavBar.js  SubmitButton.js
frontend-mob/forms/: InviteUserForm.js  LoginAlt.js  LoginForm.js  NewSeriesForm.js  RegisterForm.js  SeriesListForm.js  SingleSeriesForm.js  UnclaimedEventForm.js
frontend-mob/pages/: all-series.js  index.js
frontend-mob/services/: data-fetcher.js
frontend-mob/styles/: globals.css
frontend-next/: package-lock.json  package.json
frontend-next/Forms/: LonginForm.js
frontend-next/components/: InputField.js
frontend-next/forms/: LoginForm.js  NewEventForm.js  NewSeriesForm.js  RegForm..js  RegisterForm.js  RegistrationForm..js  SeriesListForm.js  SingleSeriesForm.js
frontend-next/pages/: all-series.js  index.js  new-series.js  series-list.js
frontend-next/services/: fetcher.js
frontend-next/styles/: LoginForm.css
frontend/src/: App.js
(+13 files in other folders)
