[tool.poetry]
name = "getkraken"
version = "0.1.0"
description = ""
authors = ["Ulrich Wilfried Motchoffo Kom <motchoffow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.10.0"
django-debug-toolbar = "^3.2"
whitenoise = "^5.2.0"
djangorestframework = "^3.12.2"
gunicorn = "^20.0.4"
docker = "^4.4.1"
docker-compose = "^1.27.4"
psycopg2-binary = "^2.8.6"
django-environ = "^0.4.5"
django-cors-headers = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
